[gd_scene load_steps=18 format=3 uid="uid://gdv3iyjehjte"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_47kj8"]
[ext_resource type="PackedScene" uid="uid://dkgbwxy08kdw1" path="res://scenes/player.tscn" id="1_coss4"]
[ext_resource type="Texture2D" uid="uid://bp53xm128fso3" path="res://assets/platform2Animation.png" id="2_g514q"]
[ext_resource type="Texture2D" uid="uid://chmcbefqocq1q" path="res://assets/saw.png" id="2_s1uu3"]
[ext_resource type="Texture2D" uid="uid://dg4wkr2hj7oio" path="res://assets/bg.png" id="3_qyw3n"]
[ext_resource type="Texture2D" uid="uid://bh7hhk7d8vcaj" path="res://assets/Free Smoke Fx  Pixel 05.png" id="3_wb5ow"]
[ext_resource type="PackedScene" uid="uid://berrpdcyfhqom" path="res://scenes/user_interface.tscn" id="4_qahj6"]
[ext_resource type="PackedScene" uid="uid://mqyniy4x7av1" path="res://scenes/player_lost_screen.tscn" id="5_ouxla"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6uqj"]
size = Vector2(128, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ng1c6"]
size = Vector2(128, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_ft58c"]
radius = 17.0294

[sub_resource type="Animation" id="Animation_1g5l4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bomb/ExpAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bomb/ExpAnim:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_li6jb"]
resource_name = "bomb_explosion"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bomb/ExpAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"game_over"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bomb/ExpAnim:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v43sn"]
_data = {
"RESET": SubResource("Animation_1g5l4"),
"bomb_explosion": SubResource("Animation_li6jb")
}

[sub_resource type="Animation" id="Animation_7toou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FakePlatform/PlatformCollision/Fake22:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ud1fg"]
resource_name = "fake_destroying"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FakePlatform/PlatformCollision/Fake22:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.15, 0.25, 0.35, 0.45, 0.55, 0.65, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"call_deffered_hiding_area"
}, {
"args": [],
"method": &"call_deffered_move_out_of_scene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lfm2v"]
_data = {
"RESET": SubResource("Animation_7toou"),
"fake_destroying": SubResource("Animation_ud1fg")
}

[node name="World" type="Node2D"]
script = ExtResource("1_47kj8")

[node name="Platforms" type="Node2D" parent="."]

[node name="Pickups" type="Node2D" parent="."]

[node name="FakePlatform" type="Node2D" parent="."]

[node name="PlatformCollision" type="StaticBody2D" parent="FakePlatform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FakePlatform/PlatformCollision"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_u6uqj")
one_way_collision = true

[node name="Fake22" type="Sprite2D" parent="FakePlatform/PlatformCollision"]
texture = ExtResource("2_g514q")
hframes = 10

[node name="AnotherArea" type="Node2D" parent="FakePlatform"]

[node name="Area2D" type="Area2D" parent="FakePlatform/AnotherArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FakePlatform/AnotherArea/Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ng1c6")

[node name="Bomb" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Bomb"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_s1uu3")

[node name="Area2D" type="Area2D" parent="Bomb"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bomb/Area2D"]
shape = SubResource("CircleShape2D_ft58c")

[node name="ExpAnim" type="Sprite2D" parent="Bomb"]
visible = false
texture = ExtResource("3_wb5ow")
hframes = 11

[node name="Player" parent="." instance=ExtResource("1_coss4")]
position = Vector2(300, 756)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(0, 800)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("3_qyw3n")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 600, 800)

[node name="PickUpTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="UserInterface" parent="." instance=ExtResource("4_qahj6")]

[node name="PlayerLostScreen" parent="." instance=ExtResource("5_ouxla")]
visible = false

[node name="HighScore" parent="PlayerLostScreen/Control" index="5"]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0
grow_horizontal = 1

[node name="Scored" parent="PlayerLostScreen/Control" index="6"]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 23.0

[node name="AnimationExp" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v43sn")
}

[node name="FakePlatformAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lfm2v")
}

[connection signal="body_entered" from="FakePlatform/AnotherArea/Area2D" to="." method="_on_area_fake_body_entered"]
[connection signal="body_entered" from="Bomb/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="PickUpTimer" to="." method="_on_pick_up_timer_timeout"]

[editable path="PlayerLostScreen"]
